tests/fixtures/invalid/pow_list_str_none.py
# Cannot call pow() with List[int], Str, None
x = pow([1, 2, 3], "hello", None)
